<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="OP80_HMI_GVL" Id="{9e2f70bd-5ea1-4bd0-b4e6-53d54004166f}">
    <Declaration><![CDATA[
VAR_GLOBAL
	
SR80_Vert_servo_status:stManualModeAxis;
SR80_Vert_servo_ctrl:Servo_Control;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>